# py

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .sync.ffs_db  .yamllint.yaml  404.html  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  LICENCE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: container.yaml  main.yaml  release.yaml
assets/javascripts/: bundle.525ec568.min.js  bundle.56dfad97.min.js  bundle.83f73b43.min.js  bundle.88dd0f4e.min.js  bundle.d6f25eb3.min.js
docs/: exporter.md  index.md  io_stream.md  runner.md  waldie.md  waldiez.md
docs/exporting/: agents.md  chats.md  flow.md  models.md  skills.md  utils.md
docs/models/: chat.md  common.md  flow.md  model.md  skill.md
docs/models/agents/: agent.md  assistant.md  group_manager.md  index.md  rag_user.md  user_proxy.md
docs/static/css/: main.css
docs/stream/: consumer.md  provider.md  server.md
examples/: .gitignore
examples/01 - Standup Comedians/: Standup Comedians 1.waldiez  Standup Comedians 2.waldiez  Standup Comedians 3.waldiez
examples/02 - On-boarding/: On-boarding.waldiez
examples/03 - Reflection/: Reflection.waldiez
examples/04 - Tools/: Tool Use.waldiez
examples/05 - Coding/: Coding.waldiez
examples/06 - Planning/: Planning 1.waldiez  Planning 2.waldiez
examples/07 - Group chat with RAG/: RAG.waldiez
examples/08 - ReAct using Tavily/: ReAct.waldiez
examples/09 - AutoDefence/: AutoDefense Flow.waldiez
examples/10 - Travel Planning/: Travel Planning.waldiez
examples/Exported/models/: Azure.waldiezModel  Gemini.waldiezModel  Groq.waldiezModel  Mistral.waldiezModel  claude-3-5-sonnet-20240620.waldiezModel  gpt-3.5-turbo.waldiezModel  gpt-4-turbo.waldiezModel  nvidia_llama-3.1-nemotron-70b-instruct.waldiezModel
examples/Exported/skills/: get_legal_moves.waldiezSkill  get_stock_prices.waldiezSkill  make_move.waldiezSkill  plot_stock_prices.waldiezSkill  search_tool.waldiezSkill
exporter/: index.html
exporting/agents/: index.html
exporting/chats/: index.html
exporting/flow/: index.html
exporting/models/: index.html
exporting/skills/: index.html
exporting/utils/: index.html
io_stream/: index.html
models/agents/: index.html
models/agents/agent/: index.html
models/agents/assistant/: index.html
models/agents/group_manager/: index.html
models/agents/rag_user/: index.html
models/agents/user_proxy/: index.html
models/chat/: index.html
models/common/: index.html
models/flow/: index.html
models/model/: index.html
models/skill/: index.html
requirements/: ag2_extras.txt  all.txt  autogen_extras.txt  dev.txt  docs.txt  main.txt  test.txt
runner/: index.html
scripts/: clean.py  eclint.py  export.py  image.py  requirements.py
search/: search_index.json
stream/consumer/: index.html
stream/provider/: index.html
stream/server/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_exporter.py  test_io_stream.py  test_runner.py  test_waldie.py  test_waldiez.py
tests/exporting/: __init__.py  flow_helpers.py
tests/exporting/agents/: __init__.py  test_agent.py  test_agent_skills.py  test_code_excution.py  test_group_manager.py  test_llm_config.py  test_teachability.py  test_termination_message.py
tests/exporting/agents/rag_user/: __init__.py  test_chroma_utils.py  test_mongo_utils.py  test_pgvector_utils.py  test_qdrant_utils.py  test_rag_user.py  test_vector_db.py
tests/exporting/chats/: __init__.py  test_chats.py  test_helpers.py  test_nested.py
tests/exporting/flow/: __init__.py  test_def_main.py  test_flow.py
tests/exporting/models/: __init__.py  test_models.py
tests/exporting/skills/: __init__.py  test_skills.py
tests/exporting/utils/: __init__.py  test_comments.py  test_importing.py  test_logging_utils.py  test_method_utils.py  test_naming.py  test_object_string.py  test_path_check.py
tests/models/agents/: test_agents.py
tests/models/agents/agent/: test_agent.py  test_agent_data.py  test_code_execution.py  test_linked_skill.py  test_nested_chat.py  test_termination_message.py
tests/models/agents/assistant/: test_assistant.py  test_assistant_data.py
tests/models/chat/: test_chat.py  test_chat_data.py  test_chat_message.py  test_chat_nested.py  test_chat_summary.py
tests/models/common/: test_base.py  test_method_utils.py  test_now.py
tests/models/flow/: test_flow.py  test_flow_data.py
tests/models/model/: test_model.py  test_model_data.py
tests/models/skill/: test_skill.py  test_skill_data.py
tests/stream/: __init__.py  test_consumer.py  test_provider.py  test_server.py
waldie/: index.html
waldiez/: __init__.py  __main__.py  _version.py  cli.py  conflict_checker.py  exporter.py  index.html  io_stream.py  runner.py  waldie.py
waldiez/exporting/: __init__.py
waldiez/exporting/agents/: __init__.py  agent.py  agent_skills.py  code_execution.py  group_manager.py  llm_config.py  teachability.py  termination_message.py
waldiez/exporting/chats/: __init__.py  chats.py  helpers.py  nested.py
waldiez/exporting/flow/: __init__.py  def_main.py  flow.py
waldiez/exporting/models/: __init__.py
waldiez/exporting/skills/: __init__.py
waldiez/exporting/utils/: __init__.py  comments.py  importing.py  logging_utils.py  method_utils.py  naming.py  object_string.py  path_check.py
waldiez/io/: __init__.py
waldiez/io/stream/: consumer.py  provider.py  server.py
waldiez/models/: __init__.py  waldiez.py
waldiez/models/agents/: __init__.py  agents.py
waldiez/models/chat/: __init__.py  chat.py  chat_data.py  chat_message.py  chat_nested.py  chat_summary.py
waldiez/models/common/: __init__.py  base.py  method_utils.py
waldiez/models/flow/: __init__.py  flow.py  flow_data.py
waldiez/models/model/: __init__.py  model.py  model_data.py
waldiez/models/skill/: __init__.py  skill.py  skill_data.py
waldiez/stream/: __init__.py  example.py  server.py
(+39 files in other folders)
